test/tests/compiler/18_structures/invalid_types/extra_credit/other_features/prefix_incr_nested_struct.plx
#  Can't apply ++/-- to any structures, including nested ones
type struc inner(    i: i32    )
type struc outer(    s: struc inner    )
pub fn main(none) i32 {
    x: struc outer = $($(1))
    ++x.s
    return 0
}
